--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -1,4 +1,37 @@
 ---
+
+- name: create public_html directory
+  file:
+    path: "{{ data_mount_root }}/{{ www_directory }}"
+    state: directory
+    mode: 0755
+    owner: "{{ media_user_uid }}"
+    group: "{{ media_user_gid }}"
+  notify:
+    - restart nginx
+
+- name: Install SSL Key
+  copy:
+    content: "{{ item.sslkeycontent }}"
+    dest: "{{ item.sslkeyfile }}"
+    owner: root
+    group: ssl-cert
+    mode: 0640
+  with_items: "{{ nginx_vhosts_ssl }}"
+  notify:
+    - restart nginx
+
+- name: Install SSL Certificate Chain
+  copy:
+    content: "{{ item.sslcertcontent }}"
+    dest: "{{ item.sslcertfile }}"
+    owner: root
+    group: ssl-cert
+    mode: 0640
+  with_items: "{{ nginx_vhosts_ssl }}"
+  notify:
+    - restart nginx
+
 - name: template nginx.conf
   template:
     src: nginx.conf.j2
@@ -6,22 +39,14 @@
   notify:
     - restart nginx
 
-- name: remove nginx default.conf
-  file:
-    path: "{{ item }}"
-    state: absent
-  with_items: "{{ nginx_default_site }}"
-  notify:
-    - restart nginx
-
-- name: template nginx foreman.conf
+- name: template nginx default.conf
   template:
-    src: foreman.conf.j2
-    dest: "{{ nginx_cfg_dir }}/foreman.conf"
+    src: default.conf.j2
+    dest: "{{ nginx_cfg_dir }}/default.conf"
   notify:
     - restart nginx
 
-- name: restart nginx passenger
+- name: restart nginx
   service:
     name: nginx
     state: restarted
