--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,18 @@
 ---
 media_user_uid: 2000
 media_user_gid: 2000
-
+nginx_user: www-data
+nginx_worker_processes: "5"
+nginx_worker_connections: "1024"
+nginx_server_names_hash_bucket_size: "64"
 nginx_upstream_repo: true
 nginx_upstream_repo_baseurl: "http://nginx.org/packages"
 nginx_upstream_repo_key: "http://nginx.org/keys/nginx_signing.key"
-
+nginx_client_body_buffer_size: "128k"
+nginx_proxy_connect_timeout: "90"
+nginx_proxy_send_timeout: "90"
+nginx_proxy_read_timeout: "90"
+nginx_proxy_buffers: "32 4k"
 nginx_server_name: "{{ ansible_fqdn }}"
 
 data_mount_root: "/data"
