--- a/files/fail2ban/filter.d/nginx-404.conf
+++ b/files/fail2ban/filter.d/nginx-404.conf
@@ -1,4 +1,3 @@
 [Definition]
 # depending on your log format
-#failregex = - - \[.*\] "(GET|POST|HEAD).*HTTP.* 404
-failregex = ^ - - .*(GET|POST) .* "(404|444|403|400)" .*$
+failregex = <HOST> - - \[.*\] "(GET|POST|HEAD).*HTTP.* 404
