enable botsearch filter

--- a/files/fail2ban/jail.d/custom.conf
+++ b/files/fail2ban/jail.d/custom.conf
@@ -22,6 +22,14 @@ filter   = nginx-badbots
 logpath  = /var/log/nginx/*.log
 maxretry = 2
 
+[nginx-botsearch]
+
+enabled  = true
+port     = http,https
+filter   = nginx-botsearch
+logpath  = /var/log/nginx/*.log
+maxretry = 2
+
 [nginx-nohome]
 
 enabled  = true
