moved jail custom config to template

--- a/templates/fail2ban/jail.d/custom.conf
+++ b/templates/fail2ban/jail.d/custom.conf
@@ -4,6 +4,9 @@ enabled  = true
 filter   = nginx-http-auth
 port     = http,https
 logpath  = /var/log/nginx/*.log
+maxretry = {{ fail2ban_maxretry }}
+findtime = {{ fail2ban_findtime }}
+bantime = {{ fail2ban_bantime }}
 
 [nginx-noscript]
 
@@ -11,7 +14,9 @@ enabled  = true
 port     = http,https
 filter   = nginx-noscript
 logpath  = /var/log/nginx/*.log
-maxretry = 6
+maxretry = {{ fail2ban_maxretry }}
+findtime = {{ fail2ban_findtime }}
+bantime = {{ fail2ban_bantime }}
 
 
 [nginx-badbots]
@@ -20,7 +25,9 @@ enabled  = true
 port     = http,https
 filter   = nginx-badbots
 logpath  = /var/log/nginx/*.log
-maxretry = 2
+maxretry = {{ fail2ban_maxretry }}
+findtime = {{ fail2ban_findtime }}
+bantime = {{ fail2ban_bantime }}
 
 [nginx-botsearch]
 
@@ -28,7 +35,9 @@ enabled  = true
 port     = http,https
 filter   = nginx-botsearch
 logpath  = /var/log/nginx/*.log
-maxretry = 2
+maxretry = {{ fail2ban_maxretry }}
+findtime = {{ fail2ban_findtime }}
+bantime = {{ fail2ban_bantime }}
 
 [nginx-nohome]
 
@@ -36,12 +45,15 @@ enabled  = true
 port     = http,https
 filter   = nginx-nohome
 logpath  = /var/log/nginx/*.log
-maxretry = 2
+maxretry = {{ fail2ban_maxretry }}
+findtime = {{ fail2ban_findtime }}
+bantime = {{ fail2ban_bantime }}
 
 [nginx-404]
 enabled  = true
 port     = http,https
 filter   = nginx-404
 logpath  = /var/log/nginx/*.log
-maxretry = 7
-findtime = 300
+maxretry = {{ fail2ban_maxretry }}
+findtime = {{ fail2ban_findtime }}
+bantime = {{ fail2ban_bantime }}
