--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,8 +28,27 @@ nginx_vhosts:
 
 nginx_vhosts_ssl: []
 
-fail2ban_bantime: "600"
-fail2ban_findtime: "600"
-fail2ban_maxretry: "5"
+fail2ban_loglevel: INFO
+fail2ban_logtarget: SYSLOG
+fail2ban_syslog_target: /var/log/fail2ban.log
+fail2ban_syslog_facility: 1
+fail2ban_socket: /var/run/fail2ban/fail2ban.sock
+fail2ban_pidfile: /var/run/fail2ban/fail2ban.pid
+fail2ban_sendername: 'Fail2ban'
+fail2ban_ignoreips:
+ - 127.0.0.1/8
+ - 10.0.0.0/8
+ - 192.168.0.0/8
+fail2ban_bantime: 1h
+fail2ban_maxretry: 3
+fail2ban_findtime: 5m
+fail2ban_backend: auto
 fail2ban_usedns: "warn"
-fail2ban_ignoreip: "10.0.0.0/8"
+fail2ban_destemail: root@localhost
+fail2ban_banaction: iptables-multiport
+fail2ban_mta: sendmail
+fail2ban_protocol: tcp
+fail2ban_chain: '<known/chain>'
+fail2ban_action: '%(action_)s'
+fail2ban_services:
+  - name: sshd
