added additional 40x errors

--- a/files/fail2ban/filter.d/nginx-404.conf
+++ b/files/fail2ban/filter.d/nginx-404.conf
@@ -1,3 +1,3 @@
 [Definition]
 # depending on your log format
-failregex = <HOST> - - \[.*\] "(GET|POST|HEAD).*HTTP.* 404
+failregex = <HOST> - - \[.*\] "(GET|POST|HEAD).*HTTP.* (404|403|401|400)
