--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -83,7 +83,7 @@
 - name: "[FAIL2BAN] :: Copy Fail2Ban SSH Private Key"
   copy:
     mode: 0600
-    owner: maas
+    owner: root
     content: "{{ fail2ban_ssh_private_key }}"
     dest: /root/.ssh/id_rsa
   when: fail2ban_ssh_private_key is defined and fail2ban_ssh_private_key != None
