--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -88,16 +88,10 @@
     dest: /root/.ssh/id_rsa
   when: fail2ban_ssh_private_key is defined and fail2ban_ssh_private_key != None
 
-
 - name: "[FAIL2BAN] :: Copy Fail2Ban Filters"
   copy:
-    src: "fail2ban/filter.d/{{ item }}"
-    dest: "/etc/fail2ban/filter.d/{{ item }}"
-  with_items:
-    - nginx-404.conf
-    - nginx-badbots.conf
-    - nginx-nohome.conf
-    - nginx-noscript.conf
+    src: "fail2ban/filter.d/"
+    dest: "/etc/fail2ban/filter.d/"
   notify: restart fail2ban
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban Local Config"
