--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,5 +1,9 @@
 ---
-nginx_pkg: nginx
+nginx_pkgs:
+  - nginx-common
+  - nginx-extras
+  - libnginx-mod-http-fancyindex
+#  - php-fpm
 
 nginx_cfg_dir: /etc/nginx/conf.d
 nginx_default_site:
