--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,15 +1,32 @@
 ---
 - name: "[NGINX] :: Install NGINX"
   package:
-    name: "{{ item }}"
+    name: "{{ nginx_pkgs }}"
     state: present
-  with_items: "{{ nginx_pkg }}"
 
 - name: "[NGINX] :: Start / Enable NGINX"
   service:
     name: nginx
     state: started
     enabled: true
+
+#- name: "[NGINX] :: Capture PHP Version"
+#  shell: php -v | head -n1 | sed -n 's/PHP \([0-9]\.[0-9]\).*/\1/p'
+#  args:
+#    executable: /bin/bash
+#  register: php_capture
+#
+#- set_fact:
+#    php_version: "{{ php_capture.stdout }}"
+#
+#- debug:
+#    msg: "PHP Version is {{ php_version }}"
+#
+#- name: "[NGINX] :: Start / Enable PHP-FPM"
+#  service:
+#    name: "php{{ php_version }}-fpm"
+#    state: started
+#    enabled: true
 
 - name: "[FAIL2BAN] :: Install Fail2Ban"
   package:
