--- a/files/fail2ban/filter.d/nginx-401.conf
+++ b/files/fail2ban/filter.d/nginx-401.conf
@@ -1,3 +1,3 @@
 [Definition]
 # depending on your log format
-failregex = <HOST> - - \[.*\] "(GET|POST|HEAD).*HTTP.* (401)
+failregex = <HOST> - - \[.*\].*"(GET|POST|HEAD).*HTTP.*(401)
