added conditions for service start tasks

--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -3,12 +3,14 @@
   package:
     name: "{{ nginx_pkgs }}"
     state: present
+  register: nginx_installed
 
 - name: "[NGINX] :: Start / Enable NGINX"
   service:
     name: nginx
     state: started
     enabled: true
+  when: nginx_installed is changed
 
 #- name: "[NGINX] :: Capture PHP Version"
 #  shell: php -v | head -n1 | sed -n 's/PHP \([0-9]\.[0-9]\).*/\1/p'
@@ -32,9 +34,11 @@
   package:
     name: fail2ban
     state: present
+  register: fail2ban_installed
 
 - name: "[FAIL2BAN] :: Start / Enable fail2ban"
   service:
     name: fail2ban
     state: started
     enabled: true
+  when: fail2ban_installed is changed
