--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,31 @@
 nginx_user: www-data
 nginx_group: www-data
 
+nginx_index:
+  - 'index.php'
+  - 'index.html'
+  - 'index.htm'
+nginx_server_tokens: "off"
+nginx_sendfile: "on"
+nginx_tcp_nopush: "on"
+nginx_default_type: "application/octet-stream"
+nginx_gzip: "on"
+nginx_gzip_vary: "on"
+nginx_gzip_disable: "MSIE [1-6]."
+nginx_gzip_proxied: any
+nginx_gzip_http_version: "1.0"
+nginx_gzip_min_length: "1000"
+nginx_gzip_comp_level: "6"
+nginx_gzip_buffers: "32 8k"
+
+nginx_log_format_main: |
+  '$remote_addr - $remote_user [$time_local]'
+  '"$request" $status $body_bytes_sent'
+  '"$http_referer" "$http_user_agent"'
+  '$request_time $upstream_connect_time $http_x_forwarded_for';
+
+nginx_access_log: "/var/log/nginx/access.log  main"
+
 nginx_worker_processes: "32"
 nginx_worker_connections: "1024"
 nginx_worker_rlimit_nofile: "409600"
@@ -16,9 +41,9 @@ nginx_client_body_buffer_size: "128k"
 nginx_proxy_connect_timeout: "180s"
 nginx_proxy_send_timeout: "180s"
 nginx_proxy_read_timeout: "180s"
-nginx_proxy_buffers: "32 4k"
-nginx_proxy_buffer_size: 4k
-nginx_proxy_busy_buffers_size: 8k
+nginx_proxy_buffers: "32 8k"
+nginx_proxy_buffer_size: 8k
+nginx_proxy_busy_buffers_size: 16k
 nginx_proxy_max_temp_file_size: 2048m
 nginx_proxy_temp_file_write_size: 32k
 nginx_fastcgi_read_timeout: "180s"
