--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,7 @@ nginx_server_tokens: "off"
 nginx_sendfile: "on"
 nginx_tcp_nopush: "on"
 nginx_default_type: "application/octet-stream"
+
 nginx_gzip: "on"
 nginx_gzip_vary: "on"
 nginx_gzip_disable: "MSIE [1-6]."
@@ -24,7 +25,7 @@ nginx_log_format_main: |
   '$remote_addr - $remote_user [$time_local]'
   '"$request" $status $body_bytes_sent'
   '"$http_referer" "$http_user_agent"'
-  '$request_time $upstream_connect_time $http_x_forwarded_for';
+  '$request_time $upstream_connect_time $http_x_forwarded_for $upstream_cache_status';
 
 nginx_access_log: "/var/log/nginx/access.log  main"
 
@@ -35,19 +36,46 @@ nginx_server_names_hash_bucket_size: "1024"
 nginx_upstream_repo: true
 nginx_upstream_repo_baseurl: "http://nginx.org/packages"
 nginx_upstream_repo_key: "http://nginx.org/keys/nginx_signing.key"
+
+nginx_proxy_temp_path: "/tmp/nginx-proxy-temp"
 nginx_proxy_buffering: "on"
-nginx_client_max_body_size: "10m"
-nginx_client_body_buffer_size: "128k"
 nginx_proxy_connect_timeout: "180s"
 nginx_proxy_send_timeout: "180s"
 nginx_proxy_read_timeout: "180s"
-nginx_proxy_buffers: "32 8k"
-nginx_proxy_buffer_size: 8k
-nginx_proxy_busy_buffers_size: 16k
-nginx_proxy_max_temp_file_size: 2048m
-nginx_proxy_temp_file_write_size: 32k
+nginx_proxy_buffers: "32 32k"
+nginx_proxy_buffer_size: "512k"
+nginx_proxy_busy_buffers_size: "512k"
+nginx_proxy_max_temp_file_size: "2048m"
+nginx_proxy_temp_file_write_size: "1m"
+nginx_client_body_buffer_size: "1m"
+nginx_client_body_temp_path: "/tmp/nginx-client-body-temp"
+nginx_client_body_timeout: "180s"
+nginx_client_max_body_size: "0"
+nginx_client_header_buffer_size: "4k"
+nginx_client_header_timeout: "180s"
+
+nginx_proxy_cache_enabled: True
+nginx_proxy_cache: "nginx-cache"
+nginx_proxy_cache_path: "/tmp/{{ nginx_proxy_cache }}"
+nginx_proxy_cache_size: "16m"
+nginx_proxy_cache_max_size: "2048m"
+nginx_proxy_cache_inactive: "10m"
+nginx_proxy_cache_use_temp_path: "off"
+nginx_proxy_cache_valid: "200 60m"
+nginx_proxy_cache_use_stale:
+  - error
+  - timeout
+  - updating
+  - http_500
+  - http_502
+  - http_503
+  - http_504
+nginx_proxy_cache_revalidate: "on"
+nginx_proxy_cache_lock: "on"
+
 nginx_fastcgi_read_timeout: "180s"
 nginx_fastcgi_send_timeout: "180s"
+
 nginx_default_servername: "{{ ansible_fqdn }}"
 nginx_default_docroot: "/var/lib/www"
 nginx_http_listen: 80
