--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,9 +1,20 @@
 ---
+
+
+nginx_upstream_repo: True
+nginx_upstream_repo_baseurl: "http://nginx.org/packages"
+nginx_upstream_repo_key: "http://nginx.org/keys/nginx_signing.key"
+
+nginx_ppa_reqs:
+  - software-properties-common
+nginx_ppa_repo: "ppa:nginx/stable"
+
 nginx_pkgs:
   - nginx-common
   - nginx-extras
+
+nginx_module_pkgs:
   - libnginx-mod-http-fancyindex
-#  - php-fpm
 
 nginx_cfg_dir: /etc/nginx/conf.d
 nginx_default_site:
