--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,6 +37,8 @@ nginx_worker_connections: "1024"
 nginx_worker_rlimit_nofile: "409600"
 nginx_server_names_hash_bucket_size: "1024"
 
+nginx_extra_parameters:
+
 nginx_proxy_temp_path: "/tmp/nginx-proxy-temp"
 nginx_proxy_buffering: "on"
 nginx_proxy_connect_timeout: "180s"
@@ -62,7 +64,7 @@ nginx_proxy_cache_size: "16m"
 nginx_proxy_cache_max_size: "2048m"
 nginx_proxy_cache_inactive: "1M"
 nginx_proxy_cache_use_temp_path: "off"
-nginx_proxy_cache_valid: 
+nginx_proxy_cache_valid:
   - "200 302 1M"
   - "404 1m"
 nginx_proxy_cache_min_uses: "1"
