--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,6 +1,6 @@
 ---
-- include_tasks: install-debian.yml
+- import_tasks: install-debian.yml
   when: ansible_os_family == "Debian"
 
-- include_tasks: install-redhat.yml
+- import_tasks: install-redhat.yml
   when: ansible_os_family == "RedHat"
