--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,11 +5,11 @@
     - "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
     - "{{ ansible_os_family }}.yml"
 
-- include_tasks: installation.yml
-- include_tasks: configuration.yml
+- import_tasks: installation.yml
+- import_tasks: configuration.yml
 
-- include_tasks: install_fail2ban.yml
+- import_tasks: install_fail2ban.yml
   when: fail2ban_enable
 
-- include_tasks: configure_fail2ban.yml
+- import_tasks: configure_fail2ban.yml
   when: fail2ban_enable
