--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
-- name: include os specific vars
-  include_vars: "{{ item }}"
-  with_first_found:
-    - "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
-    - "{{ ansible_os_family }}.yml"
+- name: Add the OS specific varibles
+  include_vars: "{{ ansible_os_family }}.yml"
 
 - import_tasks: installation.yml
 - import_tasks: configuration.yml
