--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -45,3 +45,9 @@
     state: latest
     update_cache: yes
   when: ansible_distribution_major_version >= "18"
+
+- name: Start NGINX service
+  systemd:
+    name: nginx
+    state: started
+    enabled: yes
