--- a/tasks/configure_fail2ban.yml
+++ b/tasks/configure_fail2ban.yml
@@ -11,22 +11,32 @@
   copy:
     src: "fail2ban/filter.d/"
     dest: "/etc/fail2ban/filter.d/"
-  notify: restart fail2ban
+  register: fail2ban_filter_update
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban Local Config"
   template:
     src: "fail2ban/fail2ban.local.j2"
     dest: "/etc/fail2ban/fail2ban.local"
-  notify: restart fail2ban
+ register: fail2ban_local_update
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban Jail Local Config"
   template:
     src: "fail2ban/jail.local.j2"
     dest: "/etc/fail2ban/jail.local"
-  notify: restart fail2ban
+  register: fail2ban_jail_update
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban URLTable Action"
   template:
     src: "fail2ban/urltable_action.j2"
     dest: "/etc/fail2ban/action.d/urltable.conf"
-  notify: restart fail2ban
+  register: fail2ban_action_update
+
+- name: Restart the fail2ban service
+  systemd:
+    name: fail2ban
+    state: restarted
+    enabled: yes
+  when: fail2ban_action_update.changed or
+        fail2ban_jail_update.changed or
+        fail2ban_local_update.changed or
+        fail2ban_filter_update.changed
