update handlers and restarts to new set-fact + flush handlers + restart service format, removed tags

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,10 +1,9 @@
 ---
-- name: restarting nginx
-  listen: restart nginx
+- name: "restart_fail2ban"
+  set_fact:
+    fail2ban_require_restart: True
+
+- name: "restart_nginx"
   set_fact:
     nginx_require_restart: True
-
-- name: restart fail2ban
-  service:
-    name: fail2ban
-    state: restarted
+  listen: "restart_netboot_services"
