--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -1,4 +1,4 @@
-
+---
 
 - name: configure upstream nginx apt key
   apt_key:
@@ -46,8 +46,8 @@
     update_cache: yes
   when: ansible_distribution_major_version >= "18"
 
-- name: Start NGINX service
+- name: Enable NGINX service
   systemd:
     name: nginx
-    state: started
     enabled: yes
+    daemon_reload: yes
