add nginx installer for rhel

--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -2,5 +2,5 @@
 - import_tasks: install-debian.yml
   when: ansible_os_family == "Debian"
 
-#- import_tasks: install-redhat.yml
-#  when: ansible_os_family == "RedHat"
+- import_tasks: install-redhat.yml
+  when: ansible_os_family == "RedHat"
