--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -22,3 +22,6 @@ nginx_default_site:
   - /etc/nginx/sites-available/default
   - /etc/nginx/conf.d/default.conf
   - /etc/nginx/conf.d/example_ssl.conf
+
+nginx_user: www-data
+nginx_group: www-data
