--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -11,3 +11,6 @@ nginx_pkgs:
 nginx_cfg_dir: /etc/nginx/conf.d
 nginx_default_site:
   - /etc/nginx/conf.d/default.conf
+
+nginx_user: nginx
+nginx_group: nginx
