--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,4 @@
 ---
-
-
-
 ssl_cert:
 ssl_key:
 
@@ -172,3 +169,8 @@ fail2ban_services:
     filter: nginx-404
     port: http,https
     logpath: /var/log/nginx/*.log
+
+
+nginx_allowed_ports:
+  - "80/tcp"
+  - "443/tcp"
