--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -12,29 +12,30 @@
       loop: "{{ nginx_allowed_ports }}"
   when: ansible_os_family == "RedHat"
 
-- name: configure upstream nginx rpm key
-  rpm_key:
-    key: "{{ nginx_upstream_repo_key }}"
-    state: "{% if nginx_upstream_repo %}present{% else %}absent{% endif %}"
-  when: ansible_os_family == "RedHat"
+#- name: configure upstream nginx rpm key
+#  rpm_key:
+#    key: "{{ nginx_upstream_repo_key }}"
+#    state: "{% if nginx_upstream_repo %}present{% else %}absent{% endif %}"
+#  when: ansible_distribution == "RedHat"
+#
+#- name: configure upstream nginx yum repository
+#  template:
+#    src: nginx.repo.j2
+#    dest: /etc/yum.repos.d/nginx.repo
+#  when: ansible_distribution == "RedHat" and nginx_upstream_repo
+#
+#- name: remove upstream nginx yum repository
+#  file:
+#    path: /etc/yum.repos.d/nginx.repo
+#    state: absent
+#  when: ansible_distribution == "RedHat" and not nginx_upstream_repo
 
-- name: configure upstream nginx yum repository
-  template:
-    src: nginx.repo.j2
-    dest: /etc/yum.repos.d/nginx.repo
-  when: ansible_os_family == "RedHat" and nginx_upstream_repo
-
-- name: remove upstream nginx yum repository
-  file:
-    path: /etc/yum.repos.d/nginx.repo
-    state: absent
-  when: ansible_os_family == "RedHat" and not nginx_upstream_repo
-
-- name: configure centos epel yum repository
+- name: Add EPEL repository [RHEL/CentOS]
   yum:
     name: epel-release
-    state: "{% if not nginx_upstream_repo %}present{% else %}absent{% endif %}"
-  when: ansible_distribution == "CentOS"
+    state: present
+    update_cache: yes
+  when: ansible_os_family == "RedHat"
 
 - name: Install nginx
   yum:
